--- a/docs/zz_generated.seed.yaml
+++ b/docs/zz_generated.seed.yaml
@@ -390,8 +390,7 @@ spec:
         schedule: 0 1 * * 6
         # Types of reports to generate. Available report types are cluster and namespace. By default, all types of reports are generated.
         type: null
-    # StorageClassName is the name of the storage class that the metering tool uses to save processed files before
-    # exporting it to s3 bucket. Default value is kubermatic-fast.
+    # StorageClassName is the name of the storage class that the metering prometheus instance uses to store metric data for reporting.
     storageClassName: kubermatic-fast
     # StorageSize is the size of the storage class. Default value is 100Gi.
     storageSize: 100Gi
