--- a/addons/csi/vsphere/vsphere-csi-driver.yaml
+++ b/addons/csi/vsphere/vsphere-csi-driver.yaml
@@ -21,6 +21,7 @@
 #   - template function to replace base registry
 #   - remove node selector for operator
 #   - set "improved-volume-topology": "false"
+#   - set "improved-csi-idempotency": "false"
 #   - set "block-volume-snapshot": "true"
 #   - add csi-snapshotter container
 
@@ -184,7 +185,7 @@ data:
   "online-volume-extend": "true"
   "trigger-csi-fullsync": "false"
   "async-query-volume": "true"
-  "improved-csi-idempotency": "true"
+  "improved-csi-idempotency": "false"
   "improved-volume-topology": "false"
   "block-volume-snapshot": "true"
   "csi-windows-support": "false"
