Introduce ExternalClusterBringYourOwnProvider, make CloudSpec non-nil (#10762)
* introduce byo provider for external clusters

* prevent further nil panics by making the CloudSpec in ExternalClusters non-nil

* define an enum for the external provider name

* adjust external-cluster controller

* remove redundant flag

* introduce an empty bringYourOwnCloudSpec struct, to be in-sync with regular clusters and fixing some edge cases

* adjust tests

* add migration logic

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_externalclusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_externalclusters.yaml
@@ -120,6 +120,8 @@ spec:
                     - subscriptionID
                     - tenantID
                     type: object
+                  bringyourown:
+                    type: object
                   eks:
                     properties:
                       accessKeyID:
@@ -368,6 +370,14 @@ spec:
                     - sshReference
                     type: object
                   providerName:
+                    description: ExternalClusterProvider is the identifier for the
+                      cloud provider that hosts the external cluster control plane.
+                    enum:
+                    - aks
+                    - bringyourown
+                    - eks
+                    - gke
+                    - kubeone
                     type: string
                 required:
                 - providerName
@@ -427,6 +437,7 @@ spec:
                   the cluster.
                 type: string
             required:
+            - cloudSpec
             - humanReadableName
             - pause
             type: object
