--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -1173,9 +1173,19 @@ spec:
                             setting the time when a report generation mechanism kicks
                             off. The Interval MUST be set independently.
                           type: string
+                        type:
+                          default:
+                          - cluster
+                          - namespace
+                          description: Types of reports to generate. Available report
+                            types are cluster and namespace. By default, all types
+                            of reports are generated.
+                          items:
+                            type: string
+                          type: array
                       type: object
                     default:
-                      kubermatic-metering-report-weekly:
+                      weekly:
                         interval: 7
                         schedule: 0 1 * * 6
                     description: ReportConfigurations is a map of report configuration
@@ -1183,8 +1193,8 @@ spec:
                     type: object
                   storageClassName:
                     description: StorageClassName is the name of the storage class
-                      that the metering tool uses to save processed files before exporting
-                      it to s3 bucket. Default value is kubermatic-fast.
+                      that the metering prometheus instance uses to store metric data
+                      for reporting.
                     type: string
                   storageSize:
                     description: StorageSize is the size of the storage class. Default
