sync enumerations with Go constants

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticconfigurations.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticconfigurations.yaml
@@ -587,6 +587,7 @@ spec:
                           enum:
                           - always
                           - externalCloudProvider
+                          - nonAMD64WithCanalAndIPVS
                           type: string
                         operation:
                           description: Operation is the operation triggering the compatibility
