use semver.Version as underlying type for AppDefs
This PR makes two contributions:
1. Add semVer validation to the version field directly in the CRD
2. use semver.Version as the underlying type for versions

Signed-off-by: Simon Bein <simontheleg@gmail.com>

--- a/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationinstallations.yaml
+++ b/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationinstallations.yaml
@@ -353,7 +353,9 @@ spec:
                     - source
                     type: object
                   version:
-                    description: Version of the application (eg v1.2.3)
+                    description: Version of the Application. Must be a valid SemVer
+                      version
+                    pattern: v?([0-9]+)(\.[0-9]+)?(\.[0-9]+)?(-([0-9A-Za-z\-]+(\.[0-9A-Za-z\-]+)*))?(\+([0-9A-Za-z\-]+(\.[0-9A-Za-z\-]+)*))?
                     type: string
                 required:
                 - template
