--- a/.prow/provider-anexia.yaml
+++ b/.prow/provider-anexia.yaml
@@ -40,6 +40,8 @@ presubmits:
           value: "anexia"
         - name: DISTRIBUTIONS
           value: flatcar
+        - name: KUBERMATIC_OSM_ENABLED
+          value: "false"
         - name: SETUP_MODE
           value: "kube"
         - name: DEFAULT_TIMEOUT_MINUTES
