--- a/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationdefinitions.yaml
+++ b/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationdefinitions.yaml
@@ -50,7 +50,7 @@ spec:
                 - helm
                 type: string
               versions:
-                description: available version for this application
+                description: Available version for this application
                 items:
                   properties:
                     template:
@@ -59,16 +59,23 @@ spec:
                       properties:
                         source:
                           description: Defined how the source of the application (e.g
-                            Helm chart) is retrieved
+                            Helm chart) is retrieved. Exactly one type of source must
+                            be defined.
                           properties:
                             git:
-                              description: Get application to install from a Git repository
+                              description: Install application from a Git repository
                               properties:
                                 credentials:
-                                  description: Credentials holds the git credentials
+                                  description: Credentials are optional and holds
+                                    the git credentials
                                   properties:
                                     method:
-                                      description: Authentication method
+                                      description: Authentication method. Either password
+                                        or token or ssh-key. if method is password
+                                        then username and password must be defined.
+                                        if method is token then token must be defined.
+                                        if method is ssh-key then ssh-key must be
+                                        defined.
                                       enum:
                                       - password
                                       - token
@@ -77,8 +84,10 @@ spec:
                                     password:
                                       description: Password holds the ref and key
                                         in the secret for the Password credential.
-                                        Secret must exist in the namespace where KKP
-                                        is installed.
+                                        The Secret must exist in the namespace where
+                                        KKP is installed (default is "kubermatic").
+                                        The Secret must be annotated with `apps.kubermatic.k8c.io/secret-type:`
+                                        set to helm or git
                                       properties:
                                         key:
                                           description: The key of the secret to select
@@ -100,8 +109,11 @@ spec:
                                       x-kubernetes-map-type: atomic
                                     sshKey:
                                       description: SSHKey holds the ref and key in
-                                        the secret for the SshKey credential. Secret
-                                        must exist in the namespace where KKP is installed.
+                                        the secret for the SshKey credential. The
+                                        Secret must exist in the namespace where KKP
+                                        is installed (default is "kubermatic"). The
+                                        Secret must be annotated with `apps.kubermatic.k8c.io/secret-type:`
+                                        set to helm or git
                                       properties:
                                         key:
                                           description: The key of the secret to select
@@ -123,8 +135,11 @@ spec:
                                       x-kubernetes-map-type: atomic
                                     token:
                                       description: Token holds the ref and key in
-                                        the secret for the token credential. Secret
-                                        must exist in the namespace where KKP is installed.
+                                        the secret for the token credential. The Secret
+                                        must exist in the namespace where KKP is installed
+                                        (default is "kubermatic"). The Secret must
+                                        be annotated with `apps.kubermatic.k8c.io/secret-type:`
+                                        set to helm or git
                                       properties:
                                         key:
                                           description: The key of the secret to select
@@ -147,8 +162,10 @@ spec:
                                     username:
                                       description: Username holds the ref and key
                                         in the secret for the username credential.
-                                        Secret must exist in the namespace where KKP
-                                        is installed.
+                                        The Secret must exist in the namespace where
+                                        KKP is installed (default is "kubermatic").
+                                        The Secret must be annotated with `apps.kubermatic.k8c.io/secret-type:`
+                                        set to helm or git
                                       properties:
                                         key:
                                           description: The key of the secret to select
@@ -176,10 +193,10 @@ spec:
                                     default is repository root
                                   type: string
                                 ref:
-                                  description: "Git reference to checkout. \n For
-                                    large repositories, we recommend to either use
-                                    Tag, Branch or Branch+Commit. This allows a shallow
-                                    clone, which dramatically speeds up performance"
+                                  description: Git reference to checkout. For large
+                                    repositories, we recommend to either use Tag,
+                                    Branch or Branch+Commit. This allows a shallow
+                                    clone, which dramatically speeds up performance
                                   properties:
                                     branch:
                                       description: Branch to checkout. Only the last
@@ -198,7 +215,9 @@ spec:
                                       type: string
                                   type: object
                                 remote:
-                                  description: URL to the repository (e.g. git://host.xz[:port]/path/to/repo.git/)
+                                  description: URL to the repository. Can be HTTP(s)
+                                    (e.g. https://example.com/myrepo) or SSH (e.g.
+                                    git://example.com[:port]/path/to/repo.git/)
                                   minLength: 1
                                   type: string
                               required:
@@ -206,26 +225,29 @@ spec:
                               - remote
                               type: object
                             helm:
-                              description: Get application to install from a Helm
-                                repository
+                              description: Install Application from a Helm repository
                               properties:
                                 chartName:
-                                  description: Name of the Chart
+                                  description: Name of the Chart.
                                   minLength: 1
                                   type: string
                                 chartVersion:
-                                  description: Version of the Chart
+                                  description: Version of the Chart.
                                   minLength: 1
                                   type: string
                                 credentials:
-                                  description: Credentials hold the ref to the secret
-                                    with helm credentials
+                                  description: Credentials are optional and hold the
+                                    ref to the secret with helm credentials. Either
+                                    username / Password or registryConfigFile can
+                                    be defined.
                                   properties:
                                     password:
                                       description: Password holds the ref and key
                                         in the secret for the Password credential.
-                                        Secret must exist in the namespace where KKP
-                                        is installed.
+                                        The Secret must exist in the namespace where
+                                        KKP is installed (default is "kubermatic").
+                                        The Secret must be annotated with `apps.kubermatic.k8c.io/secret-type:`
+                                        set to helm or git
                                       properties:
                                         key:
                                           description: The key of the secret to select
@@ -250,8 +272,10 @@ spec:
                                         and key in the secret for the registry credential
                                         file. The value is dockercfg file that follows
                                         the same format rules as ~/.docker/config.json
-                                        The Secret must exist in the namespace where
-                                        KKP is installed.
+                                        The The Secret must exist in the namespace
+                                        where KKP is installed (default is "kubermatic").
+                                        The Secret must be annotated with `apps.kubermatic.k8c.io/secret-type:`
+                                        set to helm or git
                                       properties:
                                         key:
                                           description: The key of the secret to select
@@ -274,8 +298,10 @@ spec:
                                     username:
                                       description: Username holds the ref and key
                                         in the secret for the username credential.
-                                        Secret must exist in the namespace where KKP
-                                        is installed.
+                                        The Secret must exist in the namespace where
+                                        KKP is installed (default is "kubermatic").
+                                        The Secret must be annotated with `apps.kubermatic.k8c.io/secret-type:`
+                                        set to helm or git
                                       properties:
                                         key:
                                           description: The key of the secret to select
@@ -312,7 +338,7 @@ spec:
                       - source
                       type: object
                     version:
-                      description: Version of the application (eg v1.2.3)
+                      description: Version of the application (e.g. v1.2.3)
                       type: string
                   required:
                   - template
