--- a/charts/iap/values.yaml
+++ b/charts/iap/values.yaml
@@ -35,7 +35,7 @@ iap:
     #   client_id: alertmanager
     #   client_secret: xxx
     #   encryption_key: xxx
-    #   config: ## see https://github.com/oauth2-proxy/oauth2-proxy/blob/master/docs/configuration/configuration.md
+    #   config: ## see https://oauth2-proxy.github.io/oauth2-proxy/docs/configuration/overview
     #     scope: "groups openid email"
     #     email_domains:
     #       - '*'
@@ -56,7 +56,7 @@ iap:
     #   client_id: grafana
     #   client_secret: xxx
     #   encryption_key: xxx
-    #   config: ## see https://github.com/oauth2-proxy/oauth2-proxy/blob/master/docs/configuration/configuration.md
+    #   config: ## see https://oauth2-proxy.github.io/oauth2-proxy/docs/configuration/overview
     #     scope: "groups openid email"
     #     email_domains:
     #       - '*'
@@ -77,7 +77,7 @@ iap:
     #   client_id: prometheus
     #   client_secret: xxx
     #   encryption_key: xxx
-    #   config: ## see https://github.com/oauth2-proxy/oauth2-proxy/blob/master/docs/configuration/configuration.md
+    #   config: ## see https://oauth2-proxy.github.io/oauth2-proxy/docs/configuration/overview
     #     scope: "groups openid email"
     #     email_domains:
     #       - '*'
