--- a/charts/monitoring/prometheus/values.yaml
+++ b/charts/monitoring/prometheus/values.yaml
@@ -110,7 +110,7 @@ prometheus:
 
   # Optionally add some more recording/alerting rules; the structure
   # beneath `rules` is identical to regular rules files as documented
-  # in https://prometheus.io/docs/prometheus/2.7/getting_started/
+  # in https://prometheus.io/docs/prometheus/latest/getting_started/
   # For larger collections of rules, consider using the custom volume
   # approach shown further down in the `volumes` section.
   #rules:
@@ -219,7 +219,7 @@ prometheus:
       affinity: {}
       tolerations: []
 
-    # Configure the target object score according to https://thanos.io/storage.md/.
+    # Configure the target object score according to https://thanos.io/tip/thanos/storage.md/.
     # Make sure to manually create the target bucket.
     objstore:
       # type:
