--- a/pkg/crd/k8c.io/kubermatic.k8c.io_addons.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_addons.yaml
@@ -22,7 +22,10 @@ spec:
     name: v1
     schema:
       openAPIV3Schema:
-        description: Addon specifies a add-on.
+        description: Addon specifies a cluster addon. Addons can be installed into
+          user clusters to provide additional manifests for CNIs, CSIs or other applications,
+          which makes addons a necessary component to create functioning user clusters.
+          Addon objects must be created inside cluster namespaces.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -37,7 +40,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: AddonSpec specifies details of an addon.
+            description: Spec describes the desired addon state.
             properties:
               cluster:
                 description: Cluster is the reference to the cluster the addon should
@@ -78,7 +81,11 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
               isDefault:
-                description: IsDefault indicates whether the addon is default
+                description: IsDefault indicates whether the addon is installed because
+                  it was configured in the default addon section in the KubermaticConfiguration.
+                  User-installed addons must not set this field to true, as extra
+                  default Addon objects (that are not in the KubermaticConfiguration)
+                  will be garbage-collected.
                 type: boolean
               name:
                 description: Name defines the name of the addon to install
@@ -112,6 +119,7 @@ spec:
             - name
             type: object
           status:
+            description: Status contrains information about the reconciliation status.
             properties:
               conditions:
                 additionalProperties:
@@ -121,7 +129,7 @@ spec:
                       format: date-time
                       type: string
                     lastTransitionTime:
-                      description: Last time the condition transit from one status
+                      description: Last time the condition transitioned from one status
                         to another.
                       format: date-time
                       type: string
