--- a/pkg/resources/test/fixtures/deployment-azure-1.24.0-apiserver.yaml
+++ b/pkg/resources/test/fixtures/deployment-azure-1.24.0-apiserver.yaml
@@ -232,6 +232,8 @@ spec:
         - 'oidc:'
         - --oidc-groups-claim
         - groups
+        - --feature-gates
+        - CSIMigrationAzureDisk=false,CSIMigrationAzureFile=false
         command:
         - /usr/local/bin/kube-apiserver
         env:
